option java_package = "org.eligosource.eventsourced.core";
option java_outer_classname = "JournalProtocol";

enum CommandType {
  WRITE_IN = 1;
  WRITE_OUT = 2;
  WRITE_ACK = 3;
}

message CommandProtocol {
  required CommandType commandType = 1;
  optional MessageProtocol message = 2;
  optional int32 processorId = 3;
  optional int32 channelId = 4;
  optional int64 sequenceNr = 5;
}

message MessageProtocol {
  optional bytes event = 2;
  optional bytes eventManifest = 3;
  optional int32 eventSerializerId = 4;
  optional string senderMessageId = 5;
  optional int32 processorId = 6;
  optional int64 sequenceNr = 7;
}

